# pr-loop

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.beads/: issues.jsonl
.claude/skills/pr-loop/: SKILL.md
.claude/skills/pr-loop-unattended/: SKILL.md
.claude/skills/pr-ready/: SKILL.md
graphql/: delete_comment.graphql  fetch_comment_pr_info.graphql  fetch_threads.graphql
graphql/operation/: add_reply.graphql  fetch_commits.graphql  fetch_remaining_comments.graphql  fetch_threads.graphql  resolve_thread.graphql  update_comment.graphql
pr-loop/: Cargo.toml
pr-loop/src/: analysis.rs  checks.rs  circleci.rs  cli.rs  credentials.rs  github.rs  main.rs  pr.rs  reply.rs  threads.rs  wait.rs
src/: analysis.rs  cc_status.rs  checks.rs  circleci.rs  cli.rs  commits.rs  config.rs  gh_actions.rs  git.rs  github.rs  graphql_validation.rs  hub.rs  main.rs  pr.rs  reply.rs  threads.rs  wait.rs
src/web/: index.html  mod.rs
