[package]
name = "pr-loop"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to help Claude Code manage PR workflows"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Glob pattern matching for check filtering
glob = "0.3"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
